Change Log for OpenXava project
===============================

- Fix: Impossible to add links in @HtmlText.
- It's possible to go to the page from a link in @HtmlText.
- Fix: The simple attribute in @HtmlText has no effect.
- Button for changing font color added to button bar for @HtmlText editor. 
- Fix: Server error in calendar when the property name for date does not contain 'date' or 'fecha'.
- MS SQL documentation improved to deal with secure connection problems.
- Fix: Broken link in reference guide main menu to Overview, a no longer existing section.
- Fix: Wrong classifier in dependency for AS/400 JDBC driver in template projects and doc.
- JasperReports and fonts upgraded to 6.20.5.
- Groovy upgraded to 4.0.12. 
- Pdfbox upgraded to 2.0.28.
- Jaxb impl upgraded to 2.3.8.
- Embedded Tomcat used in development upgraded to 9.0.75.
- Driver version in doc and new projects upgraded for MySQL, PostgreSQL, Oracle, Informix.
- Fix: FirstSteps module does not show left modules menu with narrow screen.
- Fix: Missing space in in group filter name, now instead of "in group(v1, v2)" it's "in group (v1, v2)".  
- Fix: Mixed encoding introduced by new Brazilian Portuguese messages translation.

OpenXava 7.1 (2023-5-12)
------------------------
- Calendar format for list mode automatic for every module whose entity contains a date.
- New @Mask annotation to define the valid format for entering data in a text field.
- New action in references to clear the reference value just clicking on a button.
- New action in @DescriptionsList to clear the selected value of the combo just by clicking on a button.
- New EditableValidValues editor for View.addValidValue() that allows editing the value and having a combo.
- CKEditor replaced by TinyMCE for @TextHtml and @Discussion for security reasons.
- FilePond JavaScript library used by the upload editor upgraded to 4.30.4 for security reasons.
- Leaflet JavaScript library used for maps upgraded to 1.9.3.