@@ -32,21 +32,22 @@ public class NaviOXServlet extends HttpServlet {
 	
 	protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
 		String [] uri = request.getRequestURI().split("/");
-		if (uri.length < 4) { 
+		if (uri.length < 3) { // If you change this try the application with ROOT context (launching with AppServer.run("") or creating ROOT.war)
 			response.getWriter().print(XavaResources.getString(request, "module_name_missing"));
 			return;
 		}
-
 		String applicationName = MetaModuleFactory.getApplication(); 
-		String moduleName = uri[uri.length - 1];
+		String moduleName = uri[uri.length - 1]; 
 		String url = Browsers.isMobile(request)?"/p/" + moduleName:"/naviox/index.jsp?application=" + applicationName + "&module=" + moduleName;
 		RequestDispatcher dispatcher = request.getRequestDispatcher(url);		
 		
 		dispatcher.forward(request, response);		
 	}
 	
+	
 	protected void doPost(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
 		doGet(request, response);
 	}
+	
 
 }
